# playbook2uml

./: .gitignore  LICENSE  Makefile  README.md  playbook2uml.py  pyproject.toml  setup.py
.github/workflows/: test-ansible-2.9.yml  test-ansible-latest.yml  test.yml
playbook2uml/: __main__.py  cli.py  logger.py  umlstate.py
playbook2uml/tests/: cli.py  play.py  playbook.py
playbook2uml/umlstate/: __init__.py  base.py  mermaid.py  plantuml.py
test_playbook/: book_1.yml  book_2_block.yml  book_3_block_nested.yml  book_4_import_role.yml  book_5_role.yml  book_6_loop_simple.yml  book_7_loop_and_when.yml  book_8_multi_plays.yml  book_9_until_and_retry.yml
test_playbook/expects/: book_1.mmd  book_1.puml  book_2_block.mmd  book_2_block.puml  book_3_block_nested.mmd  book_3_block_nested.puml  book_4_import_role.mmd  book_4_import_role.puml  book_5_role.mmd  book_5_role.puml  book_6_loop_simple.mmd  book_6_loop_simple.puml  book_7_loop_and_when.mmd  book_7_loop_and_when.puml  book_8_multi_plays.mmd  book_8_multi_plays.puml  book_9_until_and_retry.mmd  book_9_until_and_retry.puml
test_playbook/roles/role_1/tasks/: main.yml
